<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) Juergen Melzer
  ~
  ~ 2014.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Help -->
    <item android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="Home"
        android:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_settings"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/menu_impressum"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_impressum"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>