<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) Juergen Melzer
  ~
  ~ 2013.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_login_text"
            android:textSize="20sp"
            android:id="@+id/textView"/>
    <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/space" android:layout_gravity="right|center_vertical"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_manual"
            android:onClick="manual"
            android:id="@+id/button"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_from_foto"
            android:onClick="ocr"
            android:id="@+id/button1"/>
</LinearLayout>